--- a/opendkim/opendkim.conf
+++ b/opendkim/opendkim.conf
@@ -2,22 +2,22 @@
 ## - edit your DNS records to publish your public keys
 
 ## CONFIGURATION OPTIONS
-PidFile /var/run/opendkim/opendkim.pid
+PidFile         /var/run/opendkim/opendkim.pid
 AutoRestart     yes
 AutoRestartRate 5/1h
-Mode    sv
-Syslog  yes
+Mode            sv
+Syslog          yes
 SyslogSuccess   yes
-LogWhy  yes
-UserID  opendkim:opendkim
-Socket  inet:8891@localhost
-Umask   002
+LogWhy          yes
+UserID          opendkim:opendkim
+Socket          inet:8891@localhost
+Umask           002
 
 ## SIGNING OPTIONS
-Canonicalization        relaxed/simple
-Selector        default
-MinimumKeyBits 1024
-KeyTable        /etc/opendkim/KeyTable
-SigningTable    refile:/etc/opendkim/SigningTable
-ExternalIgnoreList /etc/opendkim/TrustedHosts
-InternalHosts      /etc/opendkim/TrustedHosts
+Canonicalization   relaxed/simple
+Selector           default
+MinimumKeyBits     1024
+KeyTable           refile:/etc/opendkim/KeyTable
+SigningTable       refile:/etc/opendkim/SigningTable
+ExternalIgnoreList refile:/etc/opendkim/TrustedHosts
+InternalHosts      refile:/etc/opendkim/TrustedHosts
